fixed bad <a> link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/foundation.css" >
+    <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/emmet.css">
 </head>
+
 <body>
-    
+    <header class="row">
+        <div class="small-12 comulns">
+            <h1>-CheatSheet Emmet-</h1>
+        </div>
+    </header>
+    <section class="row">
+        <article class="small-12 columns medium-6 columns large-4 columns">
+
+        </article>
+    </section>
 </body>
+
 </html>
