--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <code>lis / list</code>
                         </td>
                         <td>
-                            Ajoute l'attru=ibut list-style / list-style-type
+                            Ajoute l'attribut list-style / list-style-type
                         </td>
                     </tr>
                     </tbody>
