nav background-color tryout

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <header class="row">
+    <header>
         <div class="large-12 columns">
             <div class="panel">
                 <h1>Emmet -CheatSheets-</h1>
             </div>
         </div>
     </header>
-    <section class="row">
+    <section>
 
         <div class="row">
             <nav class="large-3 columns ">
@@ -28,10 +28,10 @@
                     <h5><a href="#">Accueil</a></h5>
                     <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
                         <section class="section">
-                            <h5 class="title"><a href="#">HTML</a></h5>
+                            <h5 class="title"><a href="#html">HTML</a></h5>
                         </section>
                         <section class="section">
-                            <h5 class="title"><a href="#">CSS</a></h5>
+                            <h5 class="title"><a href="#css">CSS</a></h5>
                         </section>
                     </div>
 
@@ -39,11 +39,8 @@
             </nav>
 
             <article>
-                <h4>HTML SHORTCUTS</h4>
+                <h4 id="html">HTML SHORTCUTS</h4>
                 <table class="large-9 columns">
-
-
-
                     <tbody>
                         <tr>
                             <td>
@@ -108,7 +105,7 @@
                     </tbody>
                 </table>
             </article>
-            <h4>CSS SHORTCUTS</h4>
+            <h4 id="css">CSS SHORTCUTS</h4>
             <article>
                 <table class="large-9 columns">
                     <tbody>
@@ -222,15 +219,15 @@
                         <td>
                             Ajoute l'attribut border-radius
                         </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <code>lis / list</code>
-                        </td>
-                        <td>
-                            Ajoute l'attribut list-style / list-style-type
-                        </td>
-                    </tr>
+                        </tr>
+                        <tr>
+                            <td>
+                                <code>lis / list</code>
+                            </td>
+                            <td>
+                                Ajoute l'attribut list-style / list-style-type
+                            </td>
+                        </tr>
                     </tbody>
         </div>
         </article>
