added color, centered

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 </head>
 
 <body>
-    <header>
-        <div class="large-12 columns">
-            <div class="panel">
-                <h1>Emmet -CheatSheets-</h1>
-            </div>
-        </div>
-    </header>
     <section>
+        <header>
+            <div class="large-12 columns">
+                <div class="panel">
+                    <h1 id="home">Emmet -CheatSheets- </h1>
+                </div>
+            </div>
+        </header>
 
-        <div class="row">
+        <article class="row">
             <nav class="large-3 columns ">
                 <div class="panel">
-                    <a href="#">
-                        <img src="http://placehold.it/300x240&text=[img]" />
+                    <a href="http://emmet.io/">
+                        <img src="img/emmet.png" alt="logo emmet" />
                     </a>
-                    <h5><a href="#">Accueil</a></h5>
+                    <h5><a>Accueil</a></h5>
                     <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
                         <section class="section">
                             <h5 class="title"><a href="#html">HTML</a></h5>
                         </section>
                         <section class="section">
-                            <h5 class="title"><a href="#css">CSS</a></h5>
+                            <h5 class="title"><a href="#csstab">CSS</a></h5>
                         </section>
                     </div>
 
                 </div>
             </nav>
 
-            <article>
+            <article class="large-9 columns">
                 <h4 id="html">HTML SHORTCUTS</h4>
-                <table class="large-9 columns">
+                <table>
                     <tbody>
                         <tr>
                             <td>
@@ -105,10 +105,14 @@
                     </tbody>
                 </table>
             </article>
-            <h4 id="css">CSS SHORTCUTS</h4>
-            <article>
-                <table class="large-9 columns">
-                    <tbody>
+            <article class="large-9 columns">
+                <h4>CSS SHORTCUTS
+                    <a href="#home">
+                        <img src="foundation-icons/svgs/fi-home.svg" alt="home icon" class="homeicon" />
+                    </a>
+                </h4>
+                <table>
+                    <tbody id="csstab">
                         <tr>
                             <td>
                                 <code>pos / pos:s</code>
@@ -219,7 +223,6 @@
                         <td>
                             Ajoute l'attribut border-radius
                         </td>
-                        </tr>
                         <tr>
                             <td>
                                 <code>lis / list</code>
@@ -229,24 +232,15 @@
                             </td>
                         </tr>
                     </tbody>
-        </div>
+                </table>
+            </article>
         </article>
         <footer class="row">
             <div class="large-12 columns">
                 <hr/>
                 <div class="row">
                     <div class="large-5 columns">
-                        <p>© Copyright no one at all. Go to town.</p>
-                    </div>
-                    <div class="large-7 columns">
-                        <ul class="inline-list right">
-                            <li><a href="#">Section 1</a></li>
-                            <li><a href="#">Section 2</a></li>
-                            <li><a href="#">Section 3</a></li>
-                            <li><a href="#">Section 4</a></li>
-                            <li><a href="#">Section 5</a></li>
-                            <li><a href="#">Section 6</a></li>
-                        </ul>
+                        <p><a href="http://docs.emmet.io/cheat-sheet/">Ici le site qui m'a inspiré, plus complet</a></p>
                     </div>
                 </div>
             </div>
